samples/_failures_safe/1761609656_3b02d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a735d1a1.c: In function ‘print_token’:
./samples/SAFE/__tmp_a735d1a1.c:166:5: error: expected expression at end of input
  166 |     printf("Line %d, Column %d: %s", token->line, token->column, type_names[
      |     ^~~~~~
./samples/SAFE/__tmp_a735d1a1.c:166:5: error: expected declaration or statement at end of input
